syntax = "proto3";
package quasarlabs.quasarnode.intergamm;

option go_package = "github.com/quasarlabs/quasarnode/x/intergamm/types";

message PortInfo {
  string portID = 1;  
  string channelID = 2;
  string counterpartyChannelID = 3;
  string connectionID = 4; // To be updated if needed otherwise will be left unused. 
}
