syntax = "proto3";
package abag.quasarnode.intergamm;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "ibc/core/client/v1/client.proto";
import "osmosis/gamm/v1beta1/pool.proto";
import "osmosis/gamm/pool-models/balancer/balancerPool.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/abag/quasarnode/x/intergamm/types";

// Msg defines the Msg service.
service Msg {
  rpc RegisterAccount(MsgRegisterAccount) returns (MsgRegisterAccountResponse);
  rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
  rpc JoinPool(MsgJoinPool) returns (MsgJoinPoolResponse);
  rpc ExitPool(MsgExitPool) returns (MsgExitPoolResponse);
  rpc IbcTransfer(MsgIbcTransfer) returns (MsgIbcTransferResponse);
  rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRegisterAccount {
  string creator = 1;
  string connectionId = 2;
}

message MsgRegisterAccountResponse {
}

message MsgCreatePool {
  string creator = 1;
  string connectionId = 2;
  uint64 timeoutTimestamp = 3;
  osmosis.gamm.v1beta1.PoolParams poolParams = 4;
  repeated osmosis.gamm.v1beta1.PoolAsset poolAssets = 5
     [ (gogoproto.nullable) = false ];
  string future_pool_governor = 6;
}

message MsgCreatePoolResponse {
}

message MsgJoinPool {
  string creator = 1;
  string connectionId = 2;
  uint64 timeoutTimestamp = 3;
  uint64 poolId = 4 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string shareOutAmount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"pool_amount_out\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin tokenInMaxs = 6 [
    (gogoproto.moretags) = "yaml:\"token_in_max_amounts\"",
    (gogoproto.nullable) = false
  ];
}

message MsgJoinPoolResponse {
}

message MsgExitPool {
  string creator = 1;
  string connectionId = 2;
  uint64 timeoutTimestamp = 3;
  uint64 poolId = 4 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string shareInAmount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"share_in_amount\"",
    (gogoproto.nullable) = false
  ];

  repeated cosmos.base.v1beta1.Coin tokenOutMins = 6 [
    (gogoproto.moretags) = "yaml:\"token_out_min_amounts\"",
    (gogoproto.nullable) = false
  ];
}

message MsgExitPoolResponse {
}

message MsgIbcTransfer {
  string creator = 1;
  string connectionId = 2;
  uint64 timeoutTimestamp = 3;
  string transferPort = 4;
  string transferChannel = 5;
	cosmos.base.v1beta1.Coin token = 6 [(gogoproto.nullable) = false];
	string receiver = 7;
	ibc.core.client.v1.Height transferTimeoutHeight = 8
    [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
	uint64 transferTimeoutTimestamp = 9;
}

message MsgIbcTransferResponse {
}

// MsgSubmitTx defines the payload for Msg/SubmitTx
message MsgSubmitTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                       = 1;
  string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
  google.protobuf.Any msg            = 3;
}

// MsgSubmitTxResponse defines the response for Msg/SubmitTx
message MsgSubmitTxResponse {}

// this line is used by starport scaffolding # proto/tx/message
